--- a/app/src/main/res/layout/activity_estudiantes1.xml
+++ b/app/src/main/res/layout/activity_estudiantes1.xml
@@ -50,12 +50,12 @@
         android:id="@+id/lv1"
         android:layout_width="340dp"
         android:layout_height="510dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="15dp"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintHorizontal_bias="0.563"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv2"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
