--- a/app/src/main/res/layout/activity_estudiantes2.xml
+++ b/app/src/main/res/layout/activity_estudiantes2.xml
@@ -74,12 +74,12 @@
         android:id="@+id/tv2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="164dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="@font/roboto_medium"
-        android:text="@string/nombre_materia"
+        android:text="@string/sistemas_e_informatica"
         android:textColor="@color/design_default_color_primary_dark"
-        android:textSize="20sp"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
